fix(theme-default): agenda day text in dark mode (#1064)

--- a/packages/theme-default/src/components/calendar/view-month-agenda/month-agenda-day.scss
+++ b/packages/theme-default/src/components/calendar/view-month-agenda/month-agenda-day.scss
@@ -6,6 +6,7 @@
   align-items: center;
   height: 3rem;
   border-radius: var(--sx-rounding-extra-small);
+  color: var(--sx-internal-color-text);
 }
 
 .sx__month-agenda-day--active {
